[package]
name = "cargo-cryptile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "1.1.5"
aes = "0.8.1"
threads_pool = "0.2.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "benchmark/benchmark.rs"