[package]
name = "cargo-cryptile"
version = "0.2.0"
edition = "2021"
description = "A CLI Tool to Encrypt and Decrypt files with a secure password."
license = "MIT"
repository = "https://github.com/AbhiSinha08/cryptile/tree/main/cargo-cryptile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "1.1.5"
aes = "0.8.1"
threads_pool = "0.2.6"
directories = "4.0.1"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
toml = "0.5.9"
dialoguer = { version = "0.10.2", default-features = false, features = ["password"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "benchmark/benchmark.rs"
